bin/testsuite/tests/compiler/src/errors/compiler5863.swg
#global testerror "Err0013"
struct A
{
    private a5862: s32
}

#test
{
    var a: A
    a.a5862 = 0
}
